--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
       }
 
       .control-panel {
-        min-width: 200px;
+        min-width: 50px;
         background-color: #fff;
         border: 1px solid #D0D0D0;
         color: #5A5A5A;
-        padding: .75rem 1rem;
+        padding: .5rem 1rem;
         border-radius: 0 0 12px 12px;
         box-shadow: 0px 1px 20px rgba(0, 0, 0, 0.2);
       }
@@ -101,9 +101,13 @@
 
       .control-button {
         border: none;
-        cursor: pointer;
         outline: none;
       }
+
+      .control-button:enabled {
+        cursor: pointer;
+      }
+
       .control-button:active {
         color: #D0D0D0;
       }
