--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
 
       canvas { display: block; }
 
+      .atom-input {
+        font-size: 14px;
+        font-family: monospace;
+        outline: none;
+        border: none;
+        margin: 0;
+        padding: 0;
+      }
+
       /* ------ Layout ------ */
       .container {
         display: flex;
