Show more detailed output in Transcript
Now we show:
- stdout
- stderr
- return value

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
       .transcript-list-item {
         padding: 0.5rem 2rem;
         border-bottom: 1px solid #ccc;
+        font-size: 14px;
       }
 
       .transcript-list-item.has-no-border {
@@ -145,6 +146,19 @@
         border-left: 1px solid rgba(0, 0, 0, 0.2);
         margin: 0 .5rem;
         width: 1px;
+      }
+
+      .entry-error {
+        color: #AB3933;
+      }
+
+      .entry-value {
+        color: #8A8A8A;
+      }
+
+      .entry-stdout {
+        color: #000;
+        padding-bottom: 0.5rem;
       }
     </style>
   </head>
