Reformat transcript in function style

--- a/index.html
+++ b/index.html
@@ -165,12 +165,7 @@
   <body>
     <div class="container">
       <div id="canvas" class="canvas"></div>
-      <aside>
-        <nav>
-          Transcript
-        </nav>
-        <div id="transcript" class="transcript"></div>
-      </aside>
+      <div id="transcript"></div>
       <div id="control" class="control"></div>
     </div>
 
