Change HTML element for code input

--- a/index.html
+++ b/index.html
@@ -21,13 +21,17 @@
 
       canvas { display: block; }
 
-      .atom-input {
+      .node-input {
         font-size: 14px;
         font-family: monospace;
         outline: none;
         border: none;
         margin: 0;
         padding: 0;
+        resize: none;
+        overflow: hidden;
+        position: absolute;
+        line-height: 1.1rem;
       }
 
       /* ------ Layout ------ */
