Calculate node geometry

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         resize: none;
         overflow: hidden;
         position: absolute;
-        line-height: 1.1rem;
+        line-height: 17px;
       }
 
       /* ------ Layout ------ */
