Connect to nRepl
I have changed few things around codebase to archive it:

1. Added ClojureScript to build pipeline.
2. Started to take NRepl connection information from a repl.edn config file.
3. Persist NRepl session between evals.

--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
       <div id="control" class="control"></div>
     </div>
 
+    <script src="dist/js/main.js"></script>
     <script type="module">
       require("./dist/app.js");
     </script>
