Render nodes as SVG elements

--- a/index.html
+++ b/index.html
@@ -167,6 +167,8 @@
     </style>
   </head>
   <body>
+    <div id="app"></div>
+
     <div class="container">
       <div id="canvas" class="canvas"></div>
       <div id="transcript"></div>
