Render empty SVG canvas

--- a/index.html
+++ b/index.html
@@ -164,6 +164,17 @@
         color: #000;
         padding-bottom: 0.5rem;
       }
+
+      /* New Canvas Styles */
+
+      .c-add-point>circle {
+        opacity: 0;
+        transition: opacity 0.2s ease;
+      }
+
+      .c-add-point:hover circle {
+        opacity: 1;
+      }
     </style>
   </head>
   <body>
