Add nodes to canvas

--- a/index.html
+++ b/index.html
@@ -175,6 +175,10 @@
       .c-add-point:hover circle {
         opacity: 1;
       }
+
+      .r-6-hover:hover {
+        r: 6;
+      }
     </style>
   </head>
   <body>
