Render with paperjs

--- a/index.html
+++ b/index.html
@@ -181,10 +181,9 @@
     </style>
   </head>
   <body>
-    <div id="app"></div>
-
     <div id="control" class="control"></div>
     <div class="container">
+      <div id="app" class="app"></div>
       <div id="canvas" class="canvas"></div>
       <div id="transcript"></div>
     </div>
