--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
         z-index: 10;
         font-size: 12px;
         font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+        z-index: 11;
+        position: fixed;
+        right: 0;
       }
 
       aside nav {
